@@ -1,3 +1,5 @@
+########  2013-1-11   #########
+alter table shop_trades_mergetrade add column has_sys_err tinyint(1) NOT NULL;
 ########  2012-12-29  #########
 CREATE UNIQUE INDEX uniq_item_outer_and_sku_id ON shop_memorule_composerule(outer_id,outer_sku_id);
 ########  2012-12-28  #########
